# log4cpp

./: CMakeLists.txt
include/: WebsocketLogSend.h
include/log4cpp/: RollingFileAppender.hh
src/: WebsocketLogSend.cpp  log_filter.cpp  test_logFilter.cpp
